borre una comilla

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <section id="start" class="start">
         <!-- Funcion donde pasa el cursor y se opaca el fondo no funciono se hizo por el css -->
         <!-- onmouseenter="mouseCursor(event)" onmouseleave="mouseOut(event) -->
-        <div id="contentstart" class="contentstart" ">
+        <div id="contentstart" class="contentstart">
             <header>   
                 <div class="logo">
                     <!-- <i class="fa-brands fa-codepen"></i> -->
